cmake_minimum_required(VERSION 3.10)
project(vast VERSION 1.0)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/cmake-bin")
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/cmake-bin")
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/cmake-bin")
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
message("C_COMPILER: ${CMAKE_C_COMPILER}")
message("CXX_COMPILER: ${CMAKE_CXX_COMPILER}")
find_package(Boost 1.84.0 COMPONENTS thread REQUIRED)
message ("Boost: ${Boost_MAJOR_VERSION}.${Boost_MINOR_VERSION}")
include_directories(${Boost_INCLUDE_DIRS})
add_executable(main main.cpp)
target_include_directories(main PRIVATE "${PROJECT_SOURCE_DIR}")
target_link_libraries(main LINK_PUBLIC ${Boost_LIBRARIES})